# burrito-time-go

./: README.md  package.json
.github/workflows/: build.yml
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/: Cargo.toml
